// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debug=false serve=false Field Hooks: afterChange() delete 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - Post.title.hooks.afterOperation: Simulated error: title: afterOperation
  - Post.content.hooks.afterOperation: Simulated error: content: afterOperation],
]
`;

exports[`debug=false serve=false Field Hooks: afterChange() update 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - Post.title.hooks.afterOperation: Simulated error: title: afterOperation
  - Post.content.hooks.afterOperation: Simulated error: content: afterOperation],
]
`;

exports[`debug=false serve=false Field Hooks: beforeChange() delete 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - Post.title.hooks.beforeOperation: Simulated error: title: beforeOperation
  - Post.content.hooks.beforeOperation: Simulated error: content: beforeOperation],
]
`;

exports[`debug=false serve=false Field Hooks: beforeChange() update 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - Post.title.hooks.beforeOperation: Simulated error: title: beforeOperation
  - Post.content.hooks.beforeOperation: Simulated error: content: beforeOperation],
]
`;

exports[`debug=false serve=false List Hooks: afterOperation createMany 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=false serve=false List Hooks: afterOperation createOne 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=false serve=false List Hooks: afterOperation deleteMany 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=false serve=false List Hooks: afterOperation deleteOne 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=false serve=false List Hooks: afterOperation updateMany 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=false serve=false List Hooks: afterOperation updateOne 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=false serve=false List Hooks: beforeOperation createMany 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=false serve=false List Hooks: beforeOperation createOne 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=false serve=false List Hooks: beforeOperation deleteMany 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=false serve=false List Hooks: beforeOperation deleteOne 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=false serve=false List Hooks: beforeOperation updateMany 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=false serve=false List Hooks: beforeOperation updateOne 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=false serve=true Field Hooks: afterChange() delete 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 23,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - Post.title.hooks.afterOperation: Simulated error: title: afterOperation
  - Post.content.hooks.afterOperation: Simulated error: content: afterOperation",
    "path": [
      "deletePost",
    ],
  },
]
`;

exports[`debug=false serve=true Field Hooks: afterChange() update 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - Post.title.hooks.afterOperation: Simulated error: title: afterOperation
  - Post.content.hooks.afterOperation: Simulated error: content: afterOperation",
    "path": [
      "updatePost",
    ],
  },
]
`;

exports[`debug=false serve=true Field Hooks: beforeChange() delete 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 23,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - Post.title.hooks.beforeOperation: Simulated error: title: beforeOperation
  - Post.content.hooks.beforeOperation: Simulated error: content: beforeOperation",
    "path": [
      "deletePost",
    ],
  },
]
`;

exports[`debug=false serve=true Field Hooks: beforeChange() update 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - Post.title.hooks.beforeOperation: Simulated error: title: beforeOperation
  - Post.content.hooks.beforeOperation: Simulated error: content: beforeOperation",
    "path": [
      "updatePost",
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: afterOperation createMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 41,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "createUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 41,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "createUsers",
      3,
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: afterOperation createOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 38,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "createUser",
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: afterOperation deleteMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "deleteUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "deleteUsers",
      3,
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: afterOperation deleteOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 23,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "deleteUser",
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: afterOperation updateMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 40,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "updateUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 40,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "updateUsers",
      3,
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: afterOperation updateOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "updateUser",
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: beforeOperation createMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 41,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "createUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 41,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "createUsers",
      3,
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: beforeOperation createOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 38,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "createUser",
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: beforeOperation deleteMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "deleteUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "deleteUsers",
      3,
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: beforeOperation deleteOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 23,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "deleteUser",
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: beforeOperation updateMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 40,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "updateUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 40,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "updateUsers",
      3,
    ],
  },
]
`;

exports[`debug=false serve=true List Hooks: beforeOperation updateOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "updateUser",
    ],
  },
]
`;

exports[`debug=true serve=false Field Hooks: afterChange() delete 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - Post.title.hooks.afterOperation: Simulated error: title: afterOperation
  - Post.content.hooks.afterOperation: Simulated error: content: afterOperation],
]
`;

exports[`debug=true serve=false Field Hooks: afterChange() update 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - Post.title.hooks.afterOperation: Simulated error: title: afterOperation
  - Post.content.hooks.afterOperation: Simulated error: content: afterOperation],
]
`;

exports[`debug=true serve=false Field Hooks: beforeChange() delete 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - Post.title.hooks.beforeOperation: Simulated error: title: beforeOperation
  - Post.content.hooks.beforeOperation: Simulated error: content: beforeOperation],
]
`;

exports[`debug=true serve=false Field Hooks: beforeChange() update 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - Post.title.hooks.beforeOperation: Simulated error: title: beforeOperation
  - Post.content.hooks.beforeOperation: Simulated error: content: beforeOperation],
]
`;

exports[`debug=true serve=false List Hooks: afterOperation createMany 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=true serve=false List Hooks: afterOperation createOne 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=true serve=false List Hooks: afterOperation deleteMany 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=true serve=false List Hooks: afterOperation deleteOne 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=true serve=false List Hooks: afterOperation updateMany 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=true serve=false List Hooks: afterOperation updateOne 1`] = `
[
  [GraphQLError: An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation],
]
`;

exports[`debug=true serve=false List Hooks: beforeOperation createMany 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=true serve=false List Hooks: beforeOperation createOne 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=true serve=false List Hooks: beforeOperation deleteMany 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=true serve=false List Hooks: beforeOperation deleteOne 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=true serve=false List Hooks: beforeOperation updateMany 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=true serve=false List Hooks: beforeOperation updateOne 1`] = `
[
  [GraphQLError: An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation],
]
`;

exports[`debug=true serve=true Field Hooks: afterChange() delete 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: title: afterOperation",
        },
        {
          "message": "Simulated error: content: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 23,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - Post.title.hooks.afterOperation: Simulated error: title: afterOperation
  - Post.content.hooks.afterOperation: Simulated error: content: afterOperation",
    "path": [
      "deletePost",
    ],
  },
]
`;

exports[`debug=true serve=true Field Hooks: afterChange() update 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: title: afterOperation",
        },
        {
          "message": "Simulated error: content: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - Post.title.hooks.afterOperation: Simulated error: title: afterOperation
  - Post.content.hooks.afterOperation: Simulated error: content: afterOperation",
    "path": [
      "updatePost",
    ],
  },
]
`;

exports[`debug=true serve=true Field Hooks: beforeChange() delete 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: title: beforeOperation",
        },
        {
          "message": "Simulated error: content: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 23,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - Post.title.hooks.beforeOperation: Simulated error: title: beforeOperation
  - Post.content.hooks.beforeOperation: Simulated error: content: beforeOperation",
    "path": [
      "deletePost",
    ],
  },
]
`;

exports[`debug=true serve=true Field Hooks: beforeChange() update 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: title: beforeOperation",
        },
        {
          "message": "Simulated error: content: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - Post.title.hooks.beforeOperation: Simulated error: title: beforeOperation
  - Post.content.hooks.beforeOperation: Simulated error: content: beforeOperation",
    "path": [
      "updatePost",
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: afterOperation createMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 41,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "createUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 41,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "createUsers",
      3,
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: afterOperation createOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 38,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "createUser",
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: afterOperation deleteMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "deleteUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "deleteUsers",
      3,
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: afterOperation deleteOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 23,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "deleteUser",
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: afterOperation updateMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 40,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "updateUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 40,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "updateUsers",
      3,
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: afterOperation updateOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: afterOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "afterOperation".
  - User.hooks.afterOperation: Simulated error: afterOperation",
    "path": [
      "updateUser",
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: beforeOperation createMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 41,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "createUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 41,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "createUsers",
      3,
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: beforeOperation createOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 38,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "createUser",
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: beforeOperation deleteMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "deleteUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "deleteUsers",
      3,
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: beforeOperation deleteOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 23,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "deleteUser",
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: beforeOperation updateMany 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 40,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "updateUsers",
      1,
    ],
  },
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 40,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "updateUsers",
      3,
    ],
  },
]
`;

exports[`debug=true serve=true List Hooks: beforeOperation updateOne 1`] = `
[
  {
    "extensions": {
      "code": "KS_EXTENSION_ERROR",
      "debug": [
        {
          "message": "Simulated error: beforeOperation",
        },
      ],
    },
    "locations": [
      {
        "column": 47,
        "line": 1,
      },
    ],
    "message": "An error occurred while running "beforeOperation".
  - User.hooks.beforeOperation: Simulated error: beforeOperation",
    "path": [
      "updateUser",
    ],
  },
]
`;

exports[`debug=true serve=true bad resolve input 1`] = `
[
  [GraphQLError: Prisma error],
]
`;
